fix(WgnServers): players online layout issues

--- a/WotDashLab.App/ClientApp/src/app/wgn/servers/servers.component.scss
+++ b/WotDashLab.App/ClientApp/src/app/wgn/servers/servers.component.scss
@@ -1,7 +1,5 @@
 @import "~src/assets/variables";
-[data-value] {
-  --x: attr(data-value);
-}
+$width: 420px;
 
 .servers-container {
   margin: 0 auto;
@@ -10,15 +8,18 @@
 
 .header {
   margin-top: 2em;
+  display: flex;
+  justify-content: center;
+  width: $width;
 }
 
 .scope {
   margin-top: 1em;
-  width: 420px;
+  width: $width;
 
   .title {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     font-size: larger;
     font-weight: bolder;
     padding-bottom: 1em;
